--- a/filters.nginx.conf
+++ b/filters.nginx.conf
@@ -1,7 +1,7 @@
 user www-data;
 #user www;
 
-worker_processes 4;
+worker_processes 1;
 pid /var/run/nginx.pid;
 
 events {
@@ -42,11 +42,12 @@ http {
         listen       8880;
         server_name  127.0.0.1;
 
-        pgcopy_server db_pub "host=127.0.0.1 dbname=testdb user=testuser password=123;";
+        pgcopy_server db_pub "host=127.0.0.1 dbname=testdb user=testuser password=123";
 
 ####LOAD
         location ~/csv/(?<table>[a-z0-9_]*) {
             pgcopy_query PUT db_pub "COPY $table FROM STDIN WITH DELIMITER ';';";
+            pgcopy_query GET db_pub "COPY $table TO STDOUT WITH DELIMITER ';';";
         }
 
 ####FILTRATION SAMPLE
