Add regexp sample test

--- a/regexp_test/echo.filters.nginx.conf
+++ b/regexp_test/echo.filters.nginx.conf
@@ -54,6 +54,7 @@ http {
 #/t/table_name/col1,col2,col3?col5=...
         location ~/t/(?<table>[a-z0-9_]*)/(?<columns>\*|[a-zA-Z0-9,_]+) {
             add_header Content-Type "text/plain; charset=UTF-8";
+            echo_after_body "PGCOPY TEST:$fst3";
             pgcopy_query GET db_pub 
                 "COPY (select $columns FROM $table $fst3) TO STDOUT WITH DELIMITER ';';";
         }
