Minimized njs build

--- a/nginx.conf/njs.filters.nginx.conf
+++ b/nginx.conf/njs.filters.nginx.conf
@@ -12,7 +12,8 @@ http {
 
 ####NginScript filter, part 1/2
     js_include SourceJavaScript.js;
-    js_set $filter_by_njs kvFilter;
+    js_set $filter_by_njs_good GoodFilter;
+    js_set $filter_by_njs_bad BadFilter;
 
     server {
         listen       8880;
@@ -26,9 +27,21 @@ http {
         location ~/njs/(?<table>[a-z0-9_]*)/(?<columns>\*|[a-zA-Z0-9,_]+) {
             add_header Content-Type "text/plain; charset=UTF-8";
 
-#Best practice for debug filter:  return 200 $filter_by_njs;
+            ####Best practice for debug filter:  
+            #return 200 $filter_by_njs_good;
             pgcopy_query GET db_pub 
-                "COPY (select $columns FROM $table $filter_by_njs) TO STDOUT WITH DELIMITER ';';";
+                "COPY (select $columns FROM $table $filter_by_njs_good) TO STDOUT WITH DELIMITER ';';";
+        }
+
+#Demo for injection
+#http://127.0.0.1:8880/njs_bad/simple_data/*?s_id=2';drop table simple_data;select * from simple_data where s_id='1
+        location ~/njs_bad/(?<table>[a-z0-9_]*)/(?<columns>\*|[a-zA-Z0-9,_]+) {
+            add_header Content-Type "text/plain; charset=UTF-8";
+
+            ####Best practice for debug filter:
+            #return 200 $filter_by_njs_bad;
+            pgcopy_query GET db_pub 
+                "COPY (select $columns FROM $table $filter_by_njs_bad) TO STDOUT WITH DELIMITER ';';";
         }
     }
 }
