--- a/regexp_test/return.filters.nginx.conf
+++ b/regexp_test/return.filters.nginx.conf
@@ -42,21 +42,11 @@ http {
         listen       8880;
         server_name  127.0.0.1;
 
-        pgcopy_server db_pub "host=127.0.0.1 dbname=testdb user=testuser password=123";
-
-####LOAD
-        location ~/csv/(?<table>[a-z0-9_]*) {
-            pgcopy_query PUT db_pub "COPY $table FROM STDIN WITH DELIMITER ';';";
-            pgcopy_query GET db_pub "COPY $table TO STDOUT WITH DELIMITER ';';";
-        }
-
 ####FILTRATION SAMPLE
 #/t/table_name/col1,col2,col3?col5=...
         location ~/t/(?<table>[a-z0-9_]*)/(?<columns>\*|[a-zA-Z0-9,_]+) {
             add_header Content-Type "text/plain; charset=UTF-8";
-            echo_after_body "PGCOPY TEST:$fst3";
-            pgcopy_query GET db_pub 
-                "COPY (select $columns FROM $table $fst3) TO STDOUT WITH DELIMITER ';';";
+            return 200 $fst3;
         }
     }
 }
